cmake_minimum_required(VERSION 3.22)
project(yueshi CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# peglib submodule (header-only INTERFACE target with C++20 propagation)
set(PEGLIB_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(PEGLIB_BUILD_LUA_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory(include/peglib)

add_executable(yueshi)
target_link_libraries(yueshi PRIVATE peglib)
target_include_directories(yueshi PUBLIC include)
target_sources(yueshi PRIVATE src/yueshi.cpp src/ysState.cpp src/lua/lex.cpp)

add_executable(yueshic)
target_link_libraries(yueshic PRIVATE peglib)
target_include_directories(yueshic PUBLIC include)
target_sources(yueshic PRIVATE src/yueshic.cpp src/ysState.cpp src/lua/lex.cpp)

option(YUESHI_BUILD_TESTS "Build unit tests (requires Boost.Test)" ON)
enable_testing()
if(YUESHI_BUILD_TESTS)
    add_subdirectory(test)
endif()
